--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^7.0.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^11.0.0",
     "toast": "^0.5.4"
   },
