--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.2.0",
     "@mui/material": "^6.2.0",
+    "@yudiel/react-qr-scanner": "^2.1.0",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "html5-qrcode": "^2.3.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.4.1",
@@ -16,6 +18,7 @@
     "react-router-dom": "^7.0.2",
     "react-scripts": "^5.0.1",
     "react-toastify": "^11.0.0",
+    "source-map-loader": "^5.0.0",
     "toast": "^0.5.4"
   },
   "scripts": {
