--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/material": "^6.2.0",
     "@yudiel/react-qr-scanner": "^2.1.0",
     "axios": "^1.7.9",
+    "chance": "^1.1.12",
     "cra-template": "1.2.0",
     "html5-qrcode": "^2.3.8",
     "react": "^19.0.0",
@@ -18,6 +19,7 @@
     "react-router-dom": "^7.0.2",
     "react-scripts": "^5.0.1",
     "react-toastify": "^11.0.0",
+    "react-virtuoso": "^4.12.3",
     "source-map-loader": "^5.0.0",
     "toast": "^0.5.4"
   },
